--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,12 +6,6 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
-main{
-  height: 100vh;
-}
-footer{
-  height: 5rem;
-}
 
 .product-image {
   max-width: 400px;
@@ -83,6 +77,7 @@ a.header-link:hover,
 }
 .sub-header {
   background-color: #232f3e;
+  height:3rem;
 }
 
 .cart-badge {
@@ -90,5 +85,26 @@ a.header-link:hover,
   color: #f08000;
   font-weight: bold;
   margin-left: 16px;
-  margin-top: -3px;
+  margin-top: -8px;
 }
+.product-card {
+  /* width: 18rem;
+  height: 25rem; */
+  margin-bottom: 1.5rem;
+  /* border: 1px solid #ddd;
+  border-radius: 8px; */
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+}
+
+.product-name {
+  font-size: 1.2rem;
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+.product-price {
+  font-size: 1.4rem;
+  font-weight: bold;
+  margin-bottom: 1.5rem;
+}
+
