--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,11 +1,11 @@
-:root {
+/* :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-}
+} */
 
 .product-image {
   max-width: 400px;
@@ -45,7 +45,18 @@ img.thumbnail {
   background-color: #f0c040;
   color: #000000;
 }
-
+.btn-main{
+  background: indigo;
+  color: azure;
+  outline: none;
+  border: none;
+  width: 7.5rem;
+  text-transform: uppercase;
+}
+.btn-main:hover{
+  background: rgb(123, 228, 228);
+  color: rgb(79, 21, 146);
+}
 /* header */
 
 .navbar-brand {
@@ -78,6 +89,7 @@ a.header-link:hover,
 .sub-header {
   background-color: #232f3e;
   height:3rem;
+  border-bottom: 1px solid indigo;
 }
 
 .cart-badge {
@@ -88,11 +100,7 @@ a.header-link:hover,
   margin-top: -8px;
 }
 .product-card {
-  /* width: 18rem;
-  height: 25rem; */
   margin-bottom: 1.5rem;
-  /* border: 1px solid #ddd;
-  border-radius: 8px; */
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
 }
 
@@ -106,5 +114,8 @@ a.header-link:hover,
   font-size: 1.4rem;
   font-weight: bold;
   margin-bottom: 1.5rem;
+}
+.smal-container{
+  background-color: #1b181d;
 }
 
